traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:5: error: not found: value deplacementEst
  deplacementEst(1)
  ^TraversalZigZag:7: error: value update is not a member of Int
    if(getX()=0){
       ^TraversalZigZag:12: error: not found: value get
    setPos(getX()+1,get(Y))
                    ^TraversalZigZag:12: error: not found: value Y
    setPos(getX()+1,get(Y))
                        ^TraversalZigZag:21: error: not found: value get
    setPos(getX()-1,get(Y))
                    ^TraversalZigZag:21: error: not found: value Y
    setPos(getX()-1,get(Y))
                        ^